--- a/style.css
+++ b/style.css
@@ -29,13 +29,15 @@ body{
     font-size: 3.3rem;
   }
 }
+
+/* The WHITESPACE at the page bottom is being caused by the relative positioning here for Pomo and Timer. Fix that at the end. */
 #Pomo{
   position: relative;
   z-index: 0;
   width: 280px;
 }
 
-#timer{
+#Timer{
   position: relative;
   bottom: 12rem;
   left: 0.7rem;
