--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-*{
+/* *{
   border: 2px solid yellow;
-}
+} */
 p{
   display:inline-block;
 }
@@ -32,21 +32,22 @@ html,body{
 }
 @media(max-width: 768px){
   #Title{
-    font-size: 3.3rem;
+    font-size: 4.3rem;
   }
 }
 
 #Pomo{
   position: relative;
+  top:3rem;
   z-index: 0;
-  width: 280px;
+  width: 320px;
 }
 
 #Timer{
    position: relative;
-    bottom: 12rem;
+    bottom: 11rem;
   left: 0.7rem;
-  font-size: 3.5rem;
+  font-size: 4rem;
   font-family:'Acme', sans-serif;
   color: white;
   text-shadow: 0 0 3px black;
@@ -64,7 +65,7 @@ margin-bottom: 10px;
 background: linear-gradient(#536162,#404040);
 color: white;
 border-radius: 50%;
-font-size: 2.8rem;
+font-size: 3.8rem;
 border: 0;
 box-shadow: 0 0 5px black;
 text-shadow: 0 0 2px white;
@@ -72,8 +73,8 @@ text-shadow: 0 0 2px white;
 
 @media(max-width:768px){
   .my-btn{
-    font-size: 2rem;
-    margin-top: 25px;
+    font-size: 3rem;
+    margin-top: 35px;
   }
 }
 .my-btn:hover{
